# coursework-computational-physics

./: LICENSE  README.md
00/: Makefile  logistic_map.cc
doc/: Doxyfile
docs/: Doxyfile
src/00/: Makefile  bifurcation_diagram.py  logistic_map.cc
src/01/: Makefile  matplotlibrc  pi.cc  pi_approximation.cc  plot_walk.py  point.h  saw.cc  saw_RN.py
src/02/: Forest.h  Makefile  fit_beta.py  fit_p.py  forest_clustersize.cpp  forest_percolation.cpp  main.cc  nice_plots.cpp  percolation.cc  percolation.h  percolation.py  perculation.cc  perculation.h  perculation.py  perculation_test.cpp  plot_forest.py  qL.py  union_find.cc  union_find.h
src/03/: Makefile  Randinium.hpp
src/03/07/: Makefile  Randinium.cpp  Randinium.h  plots.py  random_test.cpp
src/03/08/: Makefile  acceptreject.hpp  boxmueller.hpp  centrallimit.hpp  distributions.cc  hist.py  transformation.hpp
src/04/09/: Makefile  analytical.py  mchainvolume.cc  (+2 more)
src/05/: E.py  Makefile  decoupled.py  ising  ising.cc  matplotlibrc  plot.py  runningstats.hpp  snapshots.py
src/06/: Makefile  binder.py  crit.py  magnetisation.py  main.cc  matplotlibrc  metropolis.hpp  snapshots.py
src/07/: CMakeLists.txt  Makefile  potts  potts.cc  potts.ipynb  union_find.h  union_find.hpp  union_find_py.cc
src/07/.ipynb_checkpoints/: potts-checkpoint.ipynb
src/08/: HeisenbergChain.ipynb
src/09/: Makefile  lanczos.cc
src/10/: Henon.ipynb
tex/01/: 01.tex  Makefile
tex/02/: .02.tex.swp  02.tex  Makefile
tex/03/: 03.tex  Makefile
tex/04/: 04.tex  Makefile
tex/05/: 05.tex  Makefile
tex/06/: 06.tex  Makefile
(+8 files in other folders)
